replace Collections.unmodifiable with newer alternative.